Created service Repository

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Myform{
+  display: flex;
+  box-sizing: border-box;
+  padding: 20px;
+  width: 500px;
+  height: 500px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+}
